Accept some repeated Java options